# supervisor-email-assistant

./: .env.example  .gitignore  README.md  make_drafts.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
examples/: professors.sample.csv
src/: __init__.py  config.py  draft_launcher.py  email_builder.py  gmail_sender.py  load_professors.py  main.py  review_page.py
templates/: email_template.example.txt  followup_template.example.txt  subject.example.txt
tests/: test_core.py
